--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
-  "author": "",
+  "name": "kim-proxy",
+  "version": "1.0.0",
+  "description": "proxy for rendering four services (about, size, reviews, images) for IKEA clone",
+  "author": "kmgehrma",
   "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
+    "webpack": "webpack --watch",
+    "server": "nodemon ./server/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "babel-loader": "^8.2.2",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "html-loader": "^2.1.2",
+    "nodemon": "^2.0.7",
+    "webpack": "^5.26.3",
+    "webpack-cli": "^4.5.0"
   }
 }
