--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server": "nodemon ./server/server.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "path": "^0.12.7"
@@ -20,9 +21,11 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.3",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "html-loader": "^2.1.2",
     "nodemon": "^2.0.7",
+    "style-loader": "^2.0.0",
     "webpack": "^5.26.3",
     "webpack-cli": "^4.5.0"
   }
